fixing Makefile to be a bit more proper

--- a/docker_demo/Makefile
+++ b/docker_demo/Makefile
@@ -5,3 +5,5 @@ build: Dockerfile
 compile: requirements/base.in
 	docker run --rm -v $(shell pwd)/requirements:/local docker_demo:dev /bin/bash -c \
 	  "python -m piptools compile --upgrade --no-annotate --no-header --allow-unsafe --generate-hashes --output-file /local/base.txt /local/base.in"
+
+.PHONY: build compile
