--- a/docker_demo/Makefile
+++ b/docker_demo/Makefile
@@ -1,9 +1,9 @@
 build: export DOCKER_BUILDKIT = 1
-build: Dockerfile
+build:
 	docker build --build-arg DEVEL=yes -t docker_demo:dev .
 
-compile: requirements/base.in
+requirements/base.txt: requirements/base.in
 	docker run --rm -v $(shell pwd)/requirements:/local docker_demo:dev /bin/bash -c \
 	  "python -m piptools compile --upgrade --no-annotate --no-header --allow-unsafe --generate-hashes --output-file /local/base.txt /local/base.in"
 
-.PHONY: build compile
+.PHONY: build
